[gd_scene load_steps=5 format=3 uid="uid://d1l6n7msbmjui"]

[ext_resource type="Theme" uid="uid://d1t08nb7i4mnk" path="res://assets/themes/default_theme.tres" id="1_jwgkq"]
[ext_resource type="Script" path="res://ui/goal_icon.gd" id="1_y471t"]
[ext_resource type="Texture2D" uid="uid://ds3s3sovlkiqn" path="res://assets/ui/check_icon.png" id="2_e4vmg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs3hj"]
bg_color = Color(0.862745, 0.847059, 0.811765, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.498039, 0.341176, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0

[node name="GoalIcon" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_xs3hj")
script = ExtResource("1_y471t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_jwgkq")
text = "Brew 5 Potions"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrentAmount" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_jwgkq")
text = "0"
horizontal_alignment = 2

[node name="Slash" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jwgkq")
text = "/"
horizontal_alignment = 2

[node name="GoalAmount" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_jwgkq")
text = "3"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="CompleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("1_jwgkq")
disabled = true
icon = ExtResource("2_e4vmg")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/CompleteButton" to="." method="complete_button_pressed"]
